Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-804

C API Python examples are broken

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.6.0
    • 0.7.0

    Description

       

      build gitMINIFICPP-694) ✗ python3 ../python/getFile.py -s ./python/library/libpython-lib.dylib -n http://localhost:8080 -i 34948508-0166-1000-7a4c-194e61494bb1 -d /tmp/getfile/
      creating ptr
      [2019-04-infol 16:35:34.478] [org::apache::nifi::minifi::processors::GetFile] [info] GetFile process /tmp/getfile//testfile
      [2019-04-infol 16:35:34.479] [org::apache::nifi::minifi::core::repository::VolatileContentRepository] [info] enter write for ./content_repository/0-0
      [2019-04-infol 16:35:34.479] [org::apache::nifi::minifi::core::repository::VolatileContentRepository] [info] Minimize locking, return stream for ./content_repository/0-0
      [2019-04-infol 16:35:34.481] [org::apache::nifi::minifi::core::ProcessSession] [info] Transferring e4de3256-6054-11e9-9877-97b2bc471bb2 from GetFile to relationship success
      Add attribute succeeded
      Cannot add the same attribute twice!
      original file name: testfile
      libc++abi.dylib: terminating with uncaught exception of type org::apache::nifi::minifi::Exception: Process Session Operation:Can not find the transfer relationship for the updated flow e4de3256-6054-11e9-9877-97b2bc471bb2
      [1] 82468 abort python3 ../python/getFile.py -s ./python/library/libpython-lib.dylib -n -i

      Attachments

        Issue Links

          Activity

            People

              aboda Arpad Boda
              aboda Arpad Boda
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h
                  1h