MINIFICPP-804 - C API Python examples are broken